# studio

./: .gitignore  DB_CRASH_REPORT.txt  Dockerfile  daily_report_2025_12_09.md  documentation_paymob.md  next.config.js  package-lock.json  package.json  project_report.txt  tailwind.config.ts
media-engine/: Cargo.toml
media-engine/src/: api.rs  lib.rs  timeline.rs
media-engine/src/engine/: ffmpeg.rs  mod.rs  renderer.rs  s3.rs
src/: middleware.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(home)/: loading.tsx  page.tsx
src/app/about/: page.tsx
src/app/checkout/: page.tsx
src/app/compare/: page.tsx
src/app/contact/: page.tsx
src/app/docs/: page.tsx
src/app/forgot-password/: page.tsx
src/app/legal/: page.tsx
src/app/login/: layout.tsx  page.tsx
src/app/payment-success/: page.tsx
src/app/pricing/: layout.tsx  page.tsx
src/app/projects/: ProjectsClient.tsx  loading.tsx  page.tsx
src/components/: CenteredLoader.tsx  ClientLayout.tsx  EditorBlock.tsx  EditorShowcase.tsx  EnvInjector.tsx  FluidCta.tsx  Footer.tsx  HeroDemo.tsx  LandingPageClient.tsx  MobileOptimizationWarning.tsx  Navbar.tsx  Providers.tsx  SubscriptionStatus.tsx  Timeline.tsx  WaveformSegment.tsx
src/contexts/: AuthContext.tsx  PerformanceContext.tsx  ThemeContext.tsx
src/hooks/: useStudioHistory.ts
src/lib/: constants.ts  env.ts  ffmpeg-merger.ts  ffmpeg-video.ts  graphql.ts  project-file.ts  s3-server.ts  server-tts.ts  timeline-adapters.ts  types.ts  wasm-loader.ts
(+44 files in other folders)
